Added more metrics to batch status
